@@ -9,6 +9,7 @@
 - Accept "localhost" as a valid URL
 - Better feedback when --sync an URL which is streaming
 - Removed cgi dependency (soon deprecated)
+- Fix: crash with some svg data:image (which are now ignored)
 - Fix images from "full" mode not being downloaded
 - Fix a crash when ls on empty page (thanks Marty Oehme)
 - Fix: A variable was not initialised without python-cryptography
